FEAT: BASIC CONDITIONAL RENDERING WITH PROTOBUFS