@@ -1,14 +1,20 @@
 package org.springframework.samples.petclinic.feature;
 
+import org.springframework.http.HttpMessage;
+import org.springframework.http.HttpOutputMessage;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.http.converter.protobuf.ProtobufHttpMessageConverter;
+import org.springframework.samples.petclinic.protobuf.FeatureResponseOuterProto.FeatureResponse;
+import org.springframework.samples.petclinic.protobuf.FeatureResponseOuterProto.FeatureResponse.Feature;
+import org.springframework.samples.petclinic.protobuf.FeatureResponseOuterProto.FeatureResponse.Feature.ValueType;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.http.MediaType;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-
+import java.util.stream.Collectors;
 import java.io.InputStreamReader;
 import java.io.BufferedReader;
 import java.io.IOException;
@@ -23,19 +29,24 @@ public class FeatureController {
     final Map<String, Feature> featureMap = new HashMap<>(); {}
 
     public FeatureController() {
-        featureMap.put("pet-list", new Feature(true));
-        featureMap.put("pet-read", new Feature(true));
-        featureMap.put("pet-edit", new Feature(true));
-        featureMap.put("pet-add", new Feature(false));
-        featureMap.put("pet-delete", new Feature(true));
-        featureMap.put("pet-requests-remaining", new Feature(5));
-        featureMap.put("pet-allowed-types", new Feature("dog cat bird snake"));
+
+        Feature featureBoolean = Feature.newBuilder().setValueType(ValueType.BOOLEAN).setBooleanValue(true).build();
+        Feature featureNumeric = Feature.newBuilder().setValueType(ValueType.NUMERIC).setNumericValue(5).build();
+        Feature featureString = Feature.newBuilder().setValueType(ValueType.BOOLEAN).setStringValue("dog cat bird snake").build();
+
+        featureMap.put("pet-list", featureBoolean);
+        featureMap.put("pet-read", featureBoolean);
+        featureMap.put("pet-edit", featureBoolean);
+        featureMap.put("pet-add", featureBoolean);
+        featureMap.put("pet-delete", featureBoolean);
+        featureMap.put("pet-requests-remaining", featureNumeric);
+        featureMap.put("pet-allowed-types", featureString);
 
     }
 
     @CrossOrigin
     @RequestMapping(value = "/feature", method = RequestMethod.POST, consumes = MediaType.APPLICATION_OCTET_STREAM_VALUE)
-    public ResponseEntity<Map<String, Feature>> list(HttpServletRequest httpServletRequest) {
+    public ResponseEntity<byte[]> list(HttpServletRequest httpServletRequest) {
         ServletInputStream inputStream;
 
         try {
@@ -45,7 +56,7 @@ public class FeatureController {
         }
 
         final List<String> list = new BufferedReader(new InputStreamReader(inputStream))
-                .lines().toList();
+                .lines().collect(Collectors.toList());
 
         Map<String, Feature> result = new HashMap<>();
 
@@ -56,8 +67,10 @@ public class FeatureController {
             }
         }
 
-        System.out.println(result);
+        FeatureResponse featureResponse = FeatureResponse.newBuilder().putAllFeatureMap(result).build();
+        
+        byte[] protobufBytes = featureResponse.toByteArray();
 
-        return new ResponseEntity<>(result, HttpStatus.OK);
+        return new ResponseEntity<>(protobufBytes, HttpStatus.OK);
     }
 }
